# bacdive-cli

./: .gitignore  README.md  bacdive-cli-0.1.0.r10.g5230160-1-any.pkg.tar.zst  pyproject.toml
.github/workflows/: release-drift.yml  release.yml
config/: default-config.toml
packaging/arch/: README.md
src/bacdive_cli/: __init__.py  cache.py  client.py  core.py  docs.py
tests/: test_bacdive_cache.py  test_bacdive_cli.py  test_bacdive_client.py  test_bacdive_docs.py  test_import_hygiene.py
